<resources>
    <string name="app_name">Shopping List Application</string>

    <string name="button_save">Zapisz</string>
    <string name="empty_not_saved">Pole nie może być puste, musisz podać nazwę</string>
    <string name="hint_new_name_product">podaj nazwę nowego produktu</string>
    <string name="hint_category_of_new_product">Podaj kategorię nowego produktu</string>
    <string name="button_create_new_list">Stwórz nową listę zakupów</string>
    <string name="hint_new_name_list">Podaj nazwę listy zakupów</string>
    <string name="button_save_new_list_name">Zapisz</string>
    <string name="button_back_from_list_name">Wróć</string>
    <string name="button_load_list">Listy preferencji</string>
    <string name="button_load_products">Produkty</string>
    <string name="button_load_categories">Kategorie</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="hint_new_name_category">Podaj nazwę kategorii</string>
    <string name="button_load_dishes">Dostępne dania</string>
    <string name="button_next">Dalej</string>
    <string name="button_load_settings">Dodatkowe ustawienia</string>
    <string name="button_load_list_of_measurment">Dostępne jednostki</string>
    <string name="button_load_form_of_accessibility">Dostępne formy dostępności</string>
    <string name="hint_new_name_unit">Podaj nową jednostkę</string>
    <string name="hint_new_form">Podaj nową formę dostępności</string>
    <string name="hint_new_name_dish">Podaj nazwę dania</string>
    <string name="add_dish">Dodaj danie</string>
    <string name="button_skip_adding_form">Pomiń dodawanie formy dostępności</string>
    <string name="button_form_of_accessibility">Formy dostępności produktu</string>
    <string name="button_unit_of_measurment">Jednostka produktu</string>
    <string name="hint_edit_name_product">Podaj nową nazwę produktu</string>
    <string name="button_category">Kategoria</string>
    <string name="lose_your_category_data">Wraz z usunięciem kategorii, utracisz też wszystkie powiązane z nią produkty</string>
    <!--    <string name="lose_your_dish_data">Wraz z usunięciem dania, utracisz też wszystkie powiązane z nim wszystki</string>-->
    <string name="hint_edit_name_category">Podaj nową nazwę kategorii</string>
    <string name="button_add_ingredients">Dodaj składnik</string>
    <string name="button_add_ingredients_later">Dodaj składniki później</string>
    <string name="hint_new_quantity">Podaj ilość danego składnika</string>
    <string name="hint_edit_name_dish">Podaj nową nazwę dania</string>
    <string name="hint_edit_quantity">Podaj nową ilość składnika</string>
    <string name="product_already_exists">Produkt o podanej nazwie już istnieje</string>
    <string name="category_already_exists">Kategoria o podanej nazwie już istnieje</string>
    <string name="dish_already_exists">Danie o podanej nazwie już istnieje</string>
    <string name="ingredient_already_exists">To danie już zawiera ten składnik</string>
    <string name="hint_new_portions">Podaj ilość porcji wybranego dania</string>
    <string name="preferences_already_exists">Ta lista preferencji zawiera już to danie</string>
    <string name="hint_edit_portions">Podaj nową ilość porcji dania na liście</string>
    <string name="lose_your_list_of_preferences_data">Wraz z usunięciem listy, utracisz wszystkie dodane w niej dotąd dania</string>
    <string name="hint_edit_name_list_of_preferences">Podaj nową nazwę listy preferencji</string>
    <string name="list_already_exists">Lista o podanej nazwie już istnieje</string>
    <string name="unit_already_exists">Taka jednostka już istnieje</string>
    <string name="form_already_exists">Taka forma dostępności już istnieje</string>
    <string name="button_generate_shopping_list">Wygeneruj listę zakupów</string>
    <string name="hint_new_shopping_list_name">Podaj nową nazwę dla listy zakupów lub zostaw nazwę domyślną</string>
    <string name="shopping_list_already_exists">Lista zakupów o podanej nazwie już istnieje</string>
    <string name="button_load_shopping_list">Listy zakupów</string>
    <string name="lose_your_shopping_list_data">Wraz z usunięciem listy utracisz wszystkie jej dane</string>
    <string name="hint_edit_name_shopping_list">Podaj nową nazwę listy zakupów</string>
    <string name="valueNotPositive">Ilość musi być dodatnia</string>
    <string name="button_create_simple_list">Zwykła lista zakupów</string>
    <string name="button_create_optimized_list">Lista z sugerowaną formą zakupów</string>
    <string name="button_show_list">Pokaż utworzoną listę</string>
    <string name="button_show_menu">Przejdź do menu</string>

    <string name="fail_message">Something went wrong</string>
    <string name="button_load_inspirations">Książkowe inspiracje</string>

    <string name="sensor_count">Liczba czujników: %d</string>
    <string name="sensors_count">Liczba czujników: %d</string>
    <string name="example_sensor_name">Sensor name</string>
    <string name="example_sensor_value">Sensor value</string>
    <string name="missing_sensor">Brak czujnika</string>
    <string name="light_sensor_label">Czujnik światła %f</string>
    <string name="temperature_sensor_label">Czujnik temperatury %f</string>

</resources>