<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

        <Button
            android:id="@+id/button_load_list"
            android:text="@string/button_load_list"
            style="@style/main_button"/>

        <Button
            android:id="@+id/button_load_shopping_list"
            android:text="@string/button_load_shopping_list"
            style="@style/main_button"/>

        <Button
            android:id="@+id/button_load_inspirations"
            android:text="@string/button_load_inspirations"
            style="@style/main_button"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/shoppinglistapp"/>

</LinearLayout>